--- a/tex/500L.tex
+++ b/tex/500L.tex
@@ -260,41 +260,7 @@
 \mainmatter
 
 
-\include{contingent}
-
-\include{same-origin-policy}
-
-\include{blockcode}
-
-\include{interpreter}
-
-\include{web-server}
-
-\include{static-analysis}
-
-\include{functionalDB}
-
-\include{flow-shop}
-
-\include{template-engine}
-
-\include{pedometer}
-
-\include{sampler}
-
-\include{spreadsheet}
-
-\include{cluster}
-
-\include{data-store}
-
-\include{objmodel}
-
-\include{ci}
-
-\include{crawler}
-
-\include{modeller}
+\include{dagoba}
 
 
 \bibliographystyle{alpha}
