--- a/tex/500L.tex
+++ b/tex/500L.tex
@@ -260,11 +260,23 @@
 \mainmatter
 
 
+\include{ocr}
+
+\include{contingent}
+
+\include{same-origin-policy}
+
+\include{blockcode}
+
 \include{interpreter}
+
+\include{web-server}
 
 \include{static-analysis}
 
 \include{functionalDB}
+
+\include{flow-shop}
 
 \include{template-engine}
 
