Tweaks to deploy web-server chapter.

--- a/tex/500L.tex
+++ b/tex/500L.tex
@@ -260,9 +260,13 @@
 \mainmatter
 
 
+\include{ocr}
+
 \include{blockcode}
 
 \include{interpreter}
+
+\include{web-server}
 
 \include{static-analysis}
 
